--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@
 								<h3>INDHOLD</h3>
 
 									<ol>
-										<h4>	<li>1. Indledning - "ABC"</li>
-											<li>2. Fejldiagnosen</li>
-											<li>4. Patientsikkerhed (Glostrup)</li>
-											<li>5. Antipsykotika er gavnligt<a href="https://www.nejm.org/doi/pdf/10.1056/NEJMoa0806994?listPDF=true">livsfarlig<a> medicin mod psykose.</h4></li>
-											<li>6. Tvangsmedicinering.</li>
-											<li>7. Har du så fået det bedre nu?</li>
-											<li>8. Grim inden i, smuk udenpå (Roskilde)</li>
-											<li>9. Aldrig psykotisk eller paranoid</li>
-											<li>10. De forudgående fire år</li>
+										<h4>	
+											<li>Indledning - "ABC"</li>
+											<li>Fejldiagnosen</li>
+											<li>Patientsikkerhed (Glostrup)</li>
+											<li>Antipsykotika er gavnligt<a href="https://www.nejm.org/doi/pdf/10.1056/NEJMoa0806994?listPDF=true">livsfarlig<a> medicin mod psykose.</h4></li>
+											<li>Tvangsmedicinering.</li>
+											<li>Har du så fået det bedre nu?</li>
+											<li>Grim inden i, smuk udenpå (Roskilde)</li>
+											<li>Aldrig psykotisk eller paranoid</li>
+											<li>De forudgående fire år</li>
+										</h>
 									</ol>
 
 										
