--- a/index.html
+++ b/index.html
@@ -1,4 +1,136 @@
- 	<li> 1. Indledning - "ABC" </li>
+<!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Dokumentation</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="logo">
+							<span class="icon fa-gem"></span>
+						</div>
+						<div class="content">
+							<div class="inner">
+								<h1>DOKUMENTATION</h1>
+								<p>En fejldiagnose og tvangsindlæggelse på "farekriteriet".</p>
+								<p>På "fri fod" efter to dage, uden medicin.</p>
+								<p>Før: En 34-årig læge med fremtidsudsigter. Nu: Psykotisk.</p>
+								<p>Alt andet er forsøgt. Det hér er det sidste, jeg har tilbage.</p>
+								<p>Nemilg dokumentation.</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#intro">Intro</a></li>
+								<li><a href="#work">Lyd</a></li>
+								<li><a href="#about">Diagnosen</a></li>
+								<li><a href="#contact">Afsavn</a></li>
+								<li><a href="#elements">Appendix</a></li>
+							</ul>
+						</nav>
+					</header>
+				<!-- Main -->
+					<div id="main">
+						<!-- Intro -->
+							<article id="intro">
+								<h2 class="major">INTRO</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+
+								<h3>INDHOLD</h3>
+
+								<ol>
+										<h4>	
+											<li><b>Indledning - "ABC"</b></li>
+											<li>Fejldiagnosen</li>
+											<li>Patientsikkerhed (Glostrup)</li>
+											<li>Antipsykotika er da gavnligt</li>
+											<li>Har du så fået det bedre nu?</li>
+											<li>Grim inden i, smuk udenpå (Roskilde)</li>
+											<li>Aldrig psykotisk eller paranoid</li>
+											<li>De forudgående fire år</li>
+										</h4>
+								</ol>
+
+										
+													
+					<!-- 11111 -->		<h4>1. Indledning -"ABC"</h4>
+
+								<h5><b>Sultestrejken (03-04-20)</b></h5>
+
+								<p>Jeg har tidligere skrevet, at min beretning er som et pudslespil. Som følge af min situation må jeg, som man gør inden for lægeverdenen,
+									 tage mig af det vigtigste først ("ABC"-princippet). Derfor:</p>
+
+								<h5><b>A: Jeg har det fysisk og psykisk relativt fint.</b></h5>
+
+								<p><b>Fysisk:</b>Jeg har intet ernæring indtaget siden den 3. april, dog noget lyst brød i går, tvunget af omstændighederne. Jeg er sund og rask i øvrigt.
+									Subjektivt har jeg været svimmel dagen efter jeg startede strejken, ledsaget af balancegener, hovedpine og svaghed i underekstremiteten især.
+									Nu er det primært muskelsvagheden, der dominerer. Ingen symptomer fra de øvrige organsystemer (jeg lirer bare standartlægeremsen af nu), især
+									ikke feberfornemmelse, kulderystelser, hoste, ekspektorat, vejrtrækningsbesvær, og jeg er ikke immunsupprimeret. De cerebrale funktioner kommer nedenfor.</p>
+
+								<p><b>Psykisk:</b>Vigtigst er det at jeg er fuldstændig cerebralt intakt, med bevaret realitetssans (selv om nogle nægter det), ingen hallucinationer eller vrangforestillinger.
+									Jeg er orienteret i tid og sted og egne data, ingen "tilstande der ganske må ligestilles med psykose at komme efter), og jeg er fuldt ud klar over konsekvensen
+									af mine handlinger. Mine pårørende, som jeg er sammen med hver eneste dag, kan naturligvis bekræfte dette. Jeg er ikke til fare for andre, og føler ingen nedtrykthed,
+									vrede eller aggresioner. Om man vil lade det gå så vidt at jeg qua min sultestrejke på et tidspunkt (efter minimum en måned), er ikke min beslutning. Strejkens primære
+									formål er jo ikke selvskade, men - kan man sige - at få en tilværelse der ikke statistisk reducerer mit liv med 15 - 20 år.</p>
+
+								<p><b>Socialt:</b>På det sociale plan (ikke ment som et karaktertræk, for så er der ingen problemer, men om det socioøkonomiske område, er min tilværelse katastrofal. Det er årsgen til alt, jeg har foretaget mig.
+									Uselviske, tålmodige og helt igennem fantastiske mennesker har hjulpet mig i en grad, jeg er evigt taknemmeligt over, og det gør de stadig, selv om de måske ikke er egnige i min strategi. Udover det er
+									alt fortsat en eksistenstruende katastrofe, der kun bliver værre, selv om jeg aldrig havde drømt om, at det kunne ske i et land som Danmark. De overgreb, den fornedrende og stigmatiserende behandling myndighederne
+									har udsat mig for er som nævnt selv formålet med denne hjemmeside. Jeg har efterhånden læst en hel del lærebøger i sociologi igennem, og der er ingen tvivl om, at min sociale sicuation i sig selv er livsforkortende
+									og de afsavn, jeg og mine fæller på den absolutte bund af samfundet, medfører lidelse i svær grad.</p>
+
+								<p>Jeg møder fortsat ingen eller meget lidt forståelse, men det er kun tilfældet for ganske få, jeg har talt med. Eller kan alle andre godt sætte sig ind i min desperate situation. De mener med andre ord, at mine handlinger,
+									med alt jeg har fortalt og vist dem, er forståelige og rationelle. Og er udemærket klar over at der ikke rigtigt har nogen alternativer. Forståelse er ikke det samme som billigelse, og hér er billedet mere diffust.
+									Personligt har jeg gjort alt, jeg har gjort for at overleve, både på kort og lang sigt. Hvordan skulle jeg så dybtfølt angre nogle ord, jeg angivligt har sagt, når jeg forud for dette af den pågældende person -
+									dokumenteret af 3. part selvfølgelig - har fået ødelagt fire år af mit liv, sultet, boet på gaden i perioder og mistet det jeg holdt mest af, lægefaget? Er jeg et ondt menneske pga. det?
+									Helt ærligt er det et irelevant spørgsmål for mig - ikke for andre selvfølgelig - men jeg har gjort alt menneskeligt muligt og lidt samtidig.</s></p>
+
+								<p>Der er altid flere sider af en sag, og nogle gange er tingene meget komplekse. Der er dog kun to ting der for alvor spiller en rolle:</p>
+
+											<ul><b>
+												<li><b>Den tilværelse jeg lever og har levet, vil jeg hellere dø end at fortsætte endnu længere ud.</b></</li>
+												<li><b>Der er ikke én eneste psykiater, der har (gidet) af forholde sig til den virkelighed, jeg vil vise</b></li>
+											</ul></b>
+
+								<p>Det kan altid blive værre, hvilket udelukkende har været tilfældet for mig. Jeg forventer intet af nogen udover myndighederne selvflgelig, jeg er evigt taknemmelig af
+									den hjælp, jeg har fået, men den har været nyttesløs, hvis jeg ikke går linen ud - og det gør jeg. Det kommer til at blive meget værre, men det er ikke for sjvt det her, jeg overdriver ikke, og
+									jeg har ikke fortalt noget om de modbydeligheder og overgreb, jeg har været udsat for endnu. Men det kommer.</p>
+
+								<p>Jeg indtager en passende mængde vand og (helt) sukkerfri sodavand. Lidt mere sodavand end passende måske. Jeg bevæger mig ikke meget, men har intil i går gået mine 10.000 skridt.
+										Værdierne er som habituelt lidt til den skæve side, med et blodtryk på 141/99 og en regelmæssig puls på 84 i går (6. april 2020).</p>
+
+								<!--		<h4>Hang og trang til tvang (Glostrup)</h4>
+										<h5>Eller: Var det lige så godt for dig som for mig?</h5>	-->
+
+
+
+
+				<h4><b>2. Fejldiagnosen</b></h4>
+
+										<ul>
+													<li><p>Fejldiagnosen: "Paranoid psykose".</li></p>
+													<li><p>Konsekvenserne var og er eksistenstruende.</li></p>
+													<li><p>Alle læger skal korrigere fejl; man har dog ikke at gøre det i mit tilfælde.</li></p>
+													<li><p>Jeg har mistet alt: Bolig, job, karriere, venner og fremtidsudsigter.</li></p>
+													<li><p>Derfor er min tilværelse nu på fjerde år ulidelig, og det må stoppe nu.</li></p>
+													<li><p>Det kræver desværre, at jeg selv må fremlægge dét, som psykiaterne ignorerer.</li></p>
+										</ul>
+
+								<p>Da jeg selv har været læge på en psykiiatrisk afdeling, véd jeg at dette nødråb i sig selv vil bekræfte fejldiagnosen i mange psykiateres optik.
+							 			<li> 1. Indledning - "ABC" </li>
 											<li> 2. Fejldiagnosen </li>
 											<li> 4. Patientsikkerhed (Glostrup). </li>
 											<li> 5. Antipsykotika er gavnligt<a href="https://www.nejm.org/doi/pdf/10.1056/NEJMoa0806994?listPDF=true">livsfarlig<a> medicin mod psykose. </li>
@@ -141,7 +273,7 @@
 										</ul>
 
 								<p>Da jeg selv har været læge på en psykiiatrisk afdeling, véd jeg at dette nødråb i sig selv vil bekræfte fejldiagnosen i mange psykiateres optik.
-							 		Men siden jeg faktisk gør det jeg gør, véd jeg naturligvis også 	godt at det er tilfældet, og at man ikke kan forklare - hverken nu eller tidligere - med
+							 	Men siden jeg faktisk gør det jeg gør, véd jeg naturligvis også godt at det er tilfældet, og at man ikke kan forklare - hverken nu eller tidligere - med
 							  	faglige termer, hvorfor jeg dog skulle være sindssyg. Der er jo ingen psykosesymptomer og ingen af mine pårørende har bemærket, at jeg har opført mig mærkeligt.</p>
 
 
@@ -514,7 +646,6 @@
 
 		<!-- BG -->
 			<div id="bg"></div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
