--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
 										</h4>
 								</ol>
 													
-								<h4>"ABC"</h4>
+								<h3>1. "ABC"</h3>
 
-								<h5><b>Sultestrejken (03-04-20)</b></h5>
+								<h4><b>Sultestrejken (03-04-20)</b></h4>
 
 								<p>Jeg har tidligere skrevet, at min beretning er som et pudslespil. Som følge af min situation må jeg, som man gør inden for lægeverdenen, tage mig af det vigtigste først ("ABC"-princippet). Derfor:</p>
 
-								<h5><b>A: Jeg har det fysisk og psykisk relativt fint.</b></h5>
+								<h4><b>A: Jeg har det fysisk og psykisk relativt fint.</b></h4>
 
 								<p><b>Fysisk:</b> Jeg har intet ernæring indtaget siden den 3. april, dog noget lyst brød i går, tvunget af omstændighederne. Jeg er sund og rask i øvrigt. Subjektivt har jeg været svimmel dagen efter jeg startede strejken, ledsaget af balancegener, hovedpine og svaghed i underekstremiteten især. Nu er det primært muskelsvagheden, der dominerer. Ingen symptomer fra de øvrige organsystemer (jeg lirer bare standartlægeremsen af nu), især ikke feberfornemmelse, kulderystelser, hoste, ekspektorat, vejrtrækningsbesvær, og jeg er ikke immunsupprimeret. De cerebrale funktioner kommer nedenfor.</p>
 
-								<p><b>Psykisk:</b>Vigtigst er det at jeg er fuldstændig cerebralt intakt, med bevaret realitetssans (selv om nogle nægter det), ingen hallucinationer eller vrangforestillinger. Jeg er orienteret i tid og sted og egne data, ingen "tilstande der ganske må ligestilles med psykose at komme efter), og jeg er fuldt ud klar over konsekvensen af mine handlinger. Mine pårørende, som jeg er sammen med hver eneste dag, kan naturligvis bekræfte dette. Jeg er ikke til fare for andre, og føler ingen nedtrykthed, vrede eller aggresioner. Om man vil lade det gå så vidt at jeg qua min sultestrejke på et tidspunkt (efter minimum en måned), er ikke min beslutning. Strejkens primære formål er jo ikke selvskade, men - kan man sige - at få en tilværelse der ikke statistisk reducerer mit liv med 15 - 20 år.</p>
+								<p><b>Psykisk:</b> Vigtigst er det at jeg er fuldstændig cerebralt intakt, med bevaret realitetssans (selv om nogle nægter det), ingen hallucinationer eller vrangforestillinger. Jeg er orienteret i tid og sted og egne data, ingen "tilstande der ganske må ligestilles med psykose at komme efter), og jeg er fuldt ud klar over konsekvensen af mine handlinger. Mine pårørende, som jeg er sammen med hver eneste dag, kan naturligvis bekræfte dette. Jeg er ikke til fare for andre, og føler ingen nedtrykthed, vrede eller aggresioner. Om man vil lade det gå så vidt at jeg qua min sultestrejke på et tidspunkt (efter minimum en måned), er ikke min beslutning. Strejkens primære formål er jo ikke selvskade, men - kan man sige - at få en tilværelse der ikke statistisk reducerer mit liv med 15 - 20 år.</p>
 
-								<p><b>Socialt:</b>På det sociale plan (ikke ment som et karaktertræk, for så er der ingen problemer, men om det socioøkonomiske område, er min tilværelse katastrofal. Det er årsgen til alt, jeg har foretaget mig. Uselviske, tålmodige og helt igennem fantastiske mennesker har hjulpet mig i en grad, jeg er evigt taknemmeligt over, og det gør de stadig, selv om de måske ikke er egnige i min strategi. Udover det er alt fortsat en eksistenstruende katastrofe, der kun bliver værre, selv om jeg aldrig havde drømt om, at det kunne ske i et land som Danmark. De overgreb, den fornedrende og stigmatiserende behandling myndighederne har udsat mig for er som nævnt selv formålet med denne hjemmeside. Jeg har efterhånden læst en hel del lærebøger i sociologi igennem, og der er ingen tvivl om, at min sociale sicuation i sig selv er livsforkortende og de afsavn, jeg og mine fæller på den absolutte bund af samfundet, medfører lidelse i svær grad.</p>
+								<p><b>Socialt:</b> På det sociale plan (ikke ment som et karaktertræk, for så er der ingen problemer, men om det socioøkonomiske område, er min tilværelse katastrofal. Det er årsgen til alt, jeg har foretaget mig. Uselviske, tålmodige og helt igennem fantastiske mennesker har hjulpet mig i en grad, jeg er evigt taknemmeligt over, og det gør de stadig, selv om de måske ikke er egnige i min strategi. Udover det er alt fortsat en eksistenstruende katastrofe, der kun bliver værre, selv om jeg aldrig havde drømt om, at det kunne ske i et land som Danmark. De overgreb, den fornedrende og stigmatiserende behandling myndighederne har udsat mig for er som nævnt selv formålet med denne hjemmeside. Jeg har efterhånden læst en hel del lærebøger i sociologi igennem, og der er ingen tvivl om, at min sociale sicuation i sig selv er livsforkortende og de afsavn, jeg og mine fæller på den absolutte bund af samfundet, medfører lidelse i svær grad.</p>
 
 								<p>Jeg møder fortsat ingen eller meget lidt forståelse, men det er kun tilfældet for ganske få, jeg har talt med. Eller kan alle andre godt sætte sig ind i min desperate situation. De mener med andre ord, at mine handlinger, med alt jeg har fortalt og vist dem, er forståelige og rationelle. Og er udemærket klar over at der ikke rigtigt har nogen alternativer. Forståelse er ikke det samme som billigelse, og hér er billedet mere diffust. Personligt har jeg gjort alt, jeg har gjort for at overleve, både på kort og lang sigt. Hvordan skulle jeg så dybtfølt angre nogle ord, jeg angivligt har sagt, når jeg forud for dette af den pågældende person - dokumenteret af 3. part selvfølgelig - har fået ødelagt fire år af mit liv, sultet, boet på gaden i perioder og mistet det jeg holdt mest af, lægefaget? Er jeg et ondt menneske pga. det? Helt ærligt er det et irelevant spørgsmål for mig - ikke for andre selvfølgelig - men jeg har gjort alt menneskeligt muligt og lidt samtidig.</p>
 
@@ -90,21 +90,21 @@
 
 								<p>Jeg indtager en passende mængde vand og (helt) sukkerfri sodavand. Lidt mere sodavand end passende måske. Jeg bevæger mig ikke meget, men har intil i går gået mine 10.000 skridt. Værdierne er som habituelt lidt til den skæve side, med et 	blodtryk på 141/99 og en regelmæssig puls på 84 i går (6. april 2020).</p>
 
-								<!-->		<h4>Hang og trang til tvang (Glostrup)</h4>
+								<!--		<h4>Hang og trang til tvang (Glostrup)</h4>
 										<h5>Eller: Var det lige så godt for dig som for mig?</h5> -->
 
 
 
 
-								<h4>2. Fejldiagnosen</h4>
+								<h3>2. Fejldiagnosen</h3>
 
 										<ul>
-													<li><p>Fejldiagnosen: "Paranoid psykose".</li></p>
-													<li><p>Konsekvenserne var og er eksistenstruende.</li></p>
-													<li><p>Alle læger skal korrigere fejl; man har dog ikke  gøre det i mit tilfælde.</li></p>
-													<li><p>Jeg har mistet alt: Bolig, job, karriere, venner og fremtidsudsigter.</li></p>
-													<li><p>Derfor er min tilværelse nu på fjerde år ulidelig, og det må stoppe nu.</li></p>
-													<li><p>Det kræver desværre, at jeg selv må fremlægge dét, som psykiaterne ignorerer.</li></p>
+													<li>Fejldiagnosen: "Paranoid psykose".</li>
+													<li>Konsekvenserne var og er eksistenstruende.</li>
+													<li>Alle læger skal korrigere fejl; man har dog ikke  gøre det i mit tilfælde.</li>
+													<li>Jeg har mistet alt: Bolig, job, karriere, venner og fremtidsudsigter.</li>
+													<li>Derfor er min tilværelse nu på fjerde år ulidelig, og det må stoppe nu.</li>
+													<li>Det kræver desværre, at jeg selv må fremlægge dét, som psykiaterne ignorerer.</li>
 										</ul>
 
 								<p>Da jeg selv har været læge på en psykiiatrisk afdeling, véd jeg at dette nødråb i sig selv vil bekræfte fejldiagnosen i mange psykiateres optik. Men siden jeg faktisk gør det, jeg gør, véd jeg naturligvis også godt at det er tilfældet, og at man ikke kan forklare - hverken nu eller tidligere - med faglige termer, hvorfor jeg dog skulle være sindssyg. Der er jo ingen psykosesymptomer og ingen af mine pårørende har bemærket, at jeg har opført mig mærkeligt.</p>
